# gemfra

./: Cargo.toml  readme.md
examples/: cgi-routed.rs  cgi-simple.rs  scgi-routed.rs
gemfra-codegen/: Cargo.toml  inputs.txt  readme.md
gemfra-codegen/examples/: named-param.rs  simple-route.rs
gemfra-codegen/src/: lib.rs
gemfra-codegen/tests/: 02-named-param.rs  test.rs
src/: application.rs  error.rs  lib.rs  protocol.rs  request.rs  response.rs  routed.rs  simple.rs
