[package]
name = "gemfra"
version = "0.1.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "scgi-routed"
path = "examples/scgi-routed.rs"

[dependencies]
chrono = "0.4"
route-recognizer = "0.3"
urlencoding = "2"
bytes = "1"
tokio = { version = "1", features = ["io-util", "net", "rt"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
