[package]
name = "gemfra"
version = "0.1.0"
edition = "2021"

license = "MIT"
repository = "https://github.com/ttocsneb/gemfra"
description = "A framework for writing gemini CGI scripts"
authors = ["Benjamin Jacobs <benjammin1100@gmail.com>"]
readme = "readme.md"
categories = ["web-programming"]
keywords = ["gemini", "cgi", "scgi"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "scgi-routed"
path = "examples/scgi-routed.rs"
required-features = ["routed", "scgi"]
[[example]]
name = "cgi-simple"
path = "examples/cgi-simple.rs"
required-features = ["cgi"]

[dependencies]
chrono = "0.4"
bytes = "1.3"
route-recognizer = { version = "0.3", optional = true }
tokio = { version = "1", features = ["io-util"] }
async-trait = "0.1"
gemfra-codegen = { version = "0.1.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"

[features]
default = ["cgi"]
# default = ["full"] # For linting
full = ["cgi", "scgi", "routed"]
routed = ["route-recognizer", "gemfra-codegen"]
scgi = ["tokio/net", "tokio/rt"]
cgi = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
# Test locally with `RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features`
