[package]
name = "gemfra-codegen"
version = "0.1.0"
edition = "2021"

license = "MIT"
repository = "https://github.com/ttocsneb/gemfra"
description = "A collection of macros for use with the gemfra crate"
authors = ["Benjamin Jacobs <benjammin1100@gmail.com>"]
readme = "readme.md"
categories = ["web-programming"]
keywords = ["gemini", "cgi", "scgi"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[[test]]
name = "macro_tests"
path = "tests/test.rs"

[[example]]
name = "simple-route"
path = "examples/simple-route.rs"
[[example]]
name = "named-param"
path = "examples/named-param.rs"

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro-error = { version = "1", default-features = false }

[dev-dependencies]
gemfra = { path = "../", features = ["full"] }
trybuild = { version = "1.0", features = ["diff"] }
async-trait = "0.1"
